- Added : Addition for allowing webmaster to disable/enable signature of users on a site. (stranger)
- Added : Addition for allowing webmaster to disable/enable of using html and external images on signatures of users of a site. (stranger/Hervet)
- Added : Using GRAVATAR in Impresscms. (real_therplima/stranger)

- Improved : The pm form to use the selected editor. (real_therplima)
- Improved : XoopsTree::getNicePathFromId has new parameter, allowing specification of the separator between links (skenow)
- Improved : System admin page markup (skenow)
- Improved : Revamping the modules list in System Admin > Modules (mcdonald/real_therplima/davidl2/mrtheme)
- Improved : Added templates support for the blocks admin area and some icons to improve the userfriendly (real_therplima)
- Improved : Improve the System dropdown menu including subitems for the preferences (real_therplima)
- Improved : Smarty library (Updated to the lastest version 2.6.19) (real_therplima)
- Improved : The Block Positons feature was separeted from the blocks admin and added to system as a new system module (real_therplima)
- Improved : Added possibility to change current encoding while upgrading. (stranger)
- Improved : Libraries default encoding is now UTF-8. (stranger)
- Improved : New smartiy variables on themes for "google analytics code" and "google meta tag". (stranger)

- Changed : Moved the Smarty library from /class to /libraries. (nekro)
- Changed : Moved the PHPmailer library from /class to /libraries. (nekro)
- Changed : Textarea is now widely. Better to create blocks and editing of templates. (sato-san)
- Changed : Password encryption method from md5 to more secure SHA256 + 2 unique salt keys. (vaughan)
- Changed : PM-Popup size bigger. (sato-san)

- Fixed #1899685 : Parse error: banners.php on line 226 (kurak_bu/nekro)
- Fixed #1932374 : Changing the 100% width of table in xoops.css to make it 100% only for table.outer (malanciault/real_therplima)  