@@ -230,4 +230,5 @@ define("_SECURITYIMAGE_ERROR","Invalid security code");
 define("_SECURITYIMAGE_GDERROR","<b><font color='#CC0000'>Library GD not installed</font> : <a target='php' href='http://fr2.php.net/manual/fr/ref.image.php'>Manual PHP</a></b><br>");
 define("_SECURITYIMAGE_FONTERROR","<b><font color='#CC0000'>No true type fonts found</font>, verify your installation</b><br>");
 */
+define("_ADM_USE_RTL","0"); // change 0 to 1 if you are using a RTL language
 ?>
