@@ -1,0 +1,359 @@
+/*Made some necessary changes for RTL languages by stranger @ www.impresscms.ir */
+/* IMPORTANT, PLEASE RESPECT THIS SEMANTIC ORDER !!! :
+	- position box,
+	- width,
+	- heigth,
+	- margin,
+	- background-color,
+	- background-image,
+	- padding,
+	- content (color, style font, ...),
+	- border,
+	 ... */
+
+/* General definitions */
+html, body {background-color : #FFF; font-size: 12px; font-family: Tahoma; margin: 0px; padding: 0px;
+BACKGROUND: url(images/background.png) #fcfcfc repeat-x 0px 85px;
+font-family: Tahoma; direction: rtl;}
+
+img { border: 0;font-family: Tahoma; direction: rtl;}
+
+FIELDSET
+{
+    BORDER-RIGHT: transparent 0px;
+    PADDING-RIGHT: 1em;
+    BORDER-TOP: #e8e8e8 1px solid;
+    PADDING-LEFT: 1em;
+    MARGIN-BOTTOM: 1em;
+    PADDING-BOTTOM: 0.5em;
+    BORDER-LEFT: transparent 0px;
+    PADDING-TOP: 0.5em;
+    BORDER-BOTTOM: transparent 0px
+font-family: Tahoma; direction: rtl;}
+LEGEND
+{
+    PADDING-RIGHT: .5em;
+    DISPLAY: block;
+    PADDING-LEFT: .5em;
+    FONT-WEIGHT: bold;
+    FONT-SIZE: 105%;
+    MARGIN: 0px;
+font-family: Tahoma; direction: rtl;}
+LABEL
+{
+    DISPLAY: block
+font-family: Tahoma; direction: rtl;}
+
+INPUT[type=text]
+{
+    PADDING-RIGHT: 0.25em;
+    MIN-WIDTH: 60%;
+    PADDING-LEFT: 0.25em;
+    BACKGROUND: url(images/form-input.png) #fff no-repeat left top;
+    PADDING-BOTTOM: 1px;
+    MARGIN: 0.25em 0px;
+    PADDING-TOP: 1px;
+    BORDER: 1px solid #D0D0D0;
+font-family: Tahoma; direction: rtl;}
+INPUT[type=password]
+{
+    PADDING-RIGHT: 0.25em;
+    MIN-WIDTH: 60%;
+    PADDING-LEFT: 0.25em;
+    BACKGROUND: url(images/form-input.png) #fff no-repeat left top;
+    PADDING-BOTTOM: 1px;
+    MARGIN: 0.25em 0px;
+    PADDING-TOP: 1px;
+    BORDER: 1px solid #D0D0D0;
+font-family: Tahoma; direction: rtl;}
+INPUT
+{
+font-family: Tahoma; direction: rtl;}
+
+SELECT
+{
+ 	
+font-family: Tahoma; direction: rtl;}
+BUTTON, INPUT[type=submit] , INPUT[type=clear] , INPUT[type=button] 
+{
+    PADDING-RIGHT: 0.5em;
+    PADDING-LEFT: 0.5em;
+    PADDING-BOTTOM: 2px;
+    PADDING-TOP: 2px;
+    BACKGROUND-IMAGE: url(images/table-caption-grey.png);
+    BACKGROUND-POSITION: bottom;
+    BACKGROUND-REPEAT: repeat-x;
+    COLOR: #444;
+    FONT-WEIGHT: bold;
+    CURSOR: pointer;
+    BORDER: outset 1px #ccc;
+font-family: Tahoma; direction: rtl;}
+
+hr { height: 3px; width: 95%; text-align:center; border: 3px #E18A00 solid;font-family: Tahoma; direction: rtl;}
+
+/* lists */
+ul { margin: 2px; padding: 2px; list-style: decimal inside; text-align: left;font-family: Tahoma; direction: rtl;}
+li { margin-left: 2px; color: #000; list-style: square inside;font-family: Tahoma; direction: rtl;}
+
+/* titles */
+h1, h2, h3, h4 {	padding: 0.5em 0 .5em .5em;font-family: Tahoma; direction: rtl;}
+h1 { font-size: 1.4em;font-family: Tahoma; direction: rtl;}
+h2 { font-size: 1.2em;font-family: Tahoma; direction: rtl;}
+h3 { font-size: 1.1em;font-family: Tahoma; direction: rtl;}
+h4 { font-size: 1.1em; font-weight: bold;font-family: Tahoma; direction: rtl;}
+
+/* ===== hypertext links ===== */
+a:link { background-color: transparent; color: #666; font-weight: bold; text-decoration: none;font-family: Tahoma; direction: rtl;}
+a:visited { background-color: transparent; color: #666; font-weight: bold; text-decoration: none;font-family: Tahoma; direction: rtl;}
+a:hover { background-color: transparent; color: #ff9966; font-weight: bold; text-decoration: none;font-family: Tahoma; direction: rtl;}
+
+/* ===== Code and Quote Definition ===== */
+.xoopsCode { background-color: #FAFAFA; color: #006600; font-size: .9em; border: #c2cdd6 1px dashed;font-family: Tahoma; direction: rtl;}
+.xoopsQuote { background-color: #FAFAFA; color: #444; font-size: .9em; line-height: 1.2em; text-align: justify; border: #c2cdd6 1px dashed;font-family: Tahoma; direction: rtl;}
+
+/* ===== Links for Quotes ===== */
+.xoopsQuote a:link, div.xoopsQuote a:visited { background-color: transparent; color: #444; font-weight: bold;font-family: Tahoma; direction: rtl;}
+.xoopsQuote a:hover, div.xoopsQuote a:active { background-color: transparent; color: #1778cb;font-family: Tahoma; direction: rtl;}
+
+/* ===== Redirect messages ===== */
+.errorMsg,.confirmMsg, .resultMsg , .warningMsg, .successMsg { padding: .8em; text-align:center; margin-bottom: 1em; border: 2px solid #ddd;font-family: Tahoma; direction: rtl;}
+.errorMsg { background-color: #FBE3E4; color: #D12F19; border-color: #FBC2C4; font-family: Tahoma; direction: rtl;}
+.confirmMsg { background-color: #FFF6BF; color: #817134; border-color: #FFD324; font-family: Tahoma; direction: rtl;}
+.warningMsg { background-color: #99CCFF; color: #000099; border-color: #0099FF; font-family: Tahoma; direction: rtl;}
+.resultMsg { background-color: #E6EFC2; color: #529214; border-color: #C6D880; font-family: Tahoma; direction: rtl;}
+.errorMsg a { background-color: transparent; color: #D12F19; font-family: Tahoma; direction: rtl;}
+.confirmMsg a { background-color: transparent; color: #817134; font-family: Tahoma; direction: rtl;}
+.errorMsg { background-color: #FBE3E4; color: #D12F19; border-color: #FBC2C4; font-family: Tahoma; direction: rtl;}
+.successMsg { background-color: #9FFF8F; color: #143F22; border-color: #2F5F3F; font-family: Tahoma; direction: rtl;}
+.successMsg a { background-color: transparent; color: #529214; font-family: Tahoma; direction: rtl;}
+
+div .errorMsg a {text-decoration: underline;font-family: Tahoma; direction: rtl;}
+div .errorMsg a:hover {color: #000;font-family: Tahoma; direction: rtl;}
+
+/* ===== General small ===== */
+.fontSmall { font-size : .7em;font-family: Tahoma; direction: rtl;}
+a.fontSmall { background-color: transparent; color: #006699;font-family: Tahoma; direction: rtl;}
+a.fontSmall:hover { background-color: transparent; color: #C23030; text-decoration: underline;font-family: Tahoma; direction: rtl;}
+
+/* ===== forms elements ===== */
+input { background-color: #fff; color:inherit; border: #CCC 1px solid; font-size: .8em; font-family: Tahoma; font-family: Tahoma; direction: rtl;}
+input:focus { background-color: #FFFFBB; border: #000 1px solid;font-family: Tahoma; direction: rtl;}
+input:hover { border: #000 1px solid;font-family: Tahoma; direction: rtl;}
+
+textarea { background-color: #fff; border: #CCC 1px solid; width: 570px; font-size: .8em; font-family: Tahoma; font-family: Tahoma; direction: rtl;}
+textarea:focus { background-color: #FFFFBB; border: #000 1px solid; font-family: Tahoma; direction: rtl;}
+textarea:hover { border: #000 1px solid;font-family: Tahoma; direction: rtl;}
+
+select { background-color: #fff; border: #CCC 1px solid; font-size: .8em; font-family: Tahoma; font-family: Tahoma; direction: rtl;}
+select:focus { background-color: #FFFFBB; border: #000 1px solid;font-family: Tahoma; direction: rtl;}
+select:hover { border: #000 1px solid;font-family: Tahoma; direction: rtl;}
+
+input.formTextBox { background: #fff; color:inherit; font-size: .8em; font-family: Tahoma;border: #000 1px solid; font-family: Tahoma; direction: rtl;}
+
+/* ===== content module ===== */
+.content { text-align: justify; padding: 0 15px 0px 15px;font-family: Tahoma; direction: rtl;}
+
+.xoopsCenter { text-align:center;font-family: Tahoma; direction: rtl;}
+
+.bg1 { background-color: #E6E6E6; color:inherit;font-family: Tahoma; direction: rtl;}
+.bg2 { background-color: #2F5376; color:inherit;font-family: Tahoma; direction: rtl;}
+.bg3 { background-color: #2F5376; color: #fff;font-family: Tahoma; direction: rtl;}
+.bg4 { background-color: #ECECEC; color:inherit;font-family: Tahoma; direction: rtl;}
+.bg5 { background-color: #ECECEC; color:inherit;font-family: Tahoma; direction: rtl;}
+
+/* ===== tables ===== */
+caption {font-style: italic; font-weight: bold;font-family: Tahoma; direction: rtl;}
+
+th, thead { background-color:#4e4e4e; color:#eeeeee; border:1px solid #AAAAAA; padding:2px; vertical-align:middle; font-family: Tahoma; direction: rtl;}
+.head { background-color:#e3e3f3; color:inherit; border:1px solid #CCC;  padding:2px; font-weight:bold; font-family: Tahoma; direction: rtl;}
+.even { background-color:#FFFFFF; color:inherit; border: 1px solid #CCCCCC; padding:2px; font-family: Tahoma; direction: rtl;}
+.odd { background-color: #f1f4fb; color:inherit; border: 1px solid #CCCCCC; padding:2px; font-family: Tahoma; direction: rtl;}
+.foot, tfoot { background-color: #eeeeee; color:inherit; border: 1px solid #4e4e4e; padding: 2px; font-weight: bold; font-family: Tahoma; direction: rtl;}
+.outer { direction : rtl;}
+
+tr.head td { background-color:#FFFFDD; border:1px solid #F3AC03; color:inherit; font-weight:bold; padding:2px;font-family: Tahoma; direction: rtl;}
+tr.even td { background-color:#FFFFFF; color:inherit; border: 1px solid #CCCCCC; padding:2px; font-family: Tahoma; direction: rtl;}
+tr.odd td { background-color: #f1f4fb; color:inherit; border: 1px solid #CCCCCC; padding:2px; font-family: Tahoma; direction: rtl;}
+tr.foot td { background-color: #eeeeee; color:inherit; border: 1px solid #4e4e4e; padding: 2px; font-weight: bold; font-family: Tahoma; direction: rtl;}
+
+form td.head {width: 30%;font-family: Tahoma; direction: rtl;}
+/* ===== debug messages ===== */
+#xo-logger-output {font-size: .8em;font-family: Tahoma; direction: rtl;}
+/**
+ * Declaraciones para nuevo formato
+ * @author BitC3R0
+ */
+div#logoHead{
+	padding: 0;
+	text-align: left;
+	background: url(images/header-bg.png) repeat-x;
+	border-bottom: 4px solid #ffb500;
+font-family: Tahoma; direction: rtl;}
+div#navbarCP{
+	background: url(images/bg-lr-titles.gif);
+	font-weight: normal;
+	font-family: Arial, Helvetica, sans-serif;
+	height: 25px;
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul{
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	/*border: 1;*/
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li{ list-style: none; padding: 0; float: right; margin: 0; margin-right: 3px; position: relative; font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li a{ padding: 4px;	display: block;	color: #4d4d4d;	font-weight: normal; font-size:14px; padding-right:20px;font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li a:hover{	border-color: #ADD8E6; color: #000; text-decoration: none; font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li ul{
+	display: none;
+	position: absolute;
+	top: 1em;
+	margin-right: 15px;
+	background: #FFFFFF;
+	border: 1px solid #000000;
+	padding: 0;
+	/*margin: 0;*/
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li ul a{
+	color: #666666;
+	font-weight: normal;
+	background: url(images/item.png) no-repeat right;
+	padding-right: 20px;
+	margin: 0;
+	font-size:11px;
+	/*border:1px solid #000000;*/
+	border: 1px solid #FFFFFF;
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li ul a:hover{
+	color: #000000;
+	background-color: #E7F4F7;
+	border-color: #ADD8E6;
+	border:1px solid #ffffff;
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li ul li{
+	width: 150px;
+	margin: 0;
+	*width: 150px;
+	*margin-right:-10px;
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li > ul {
+	top: auto;
+	right: auto;
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li:hover ul, div#navbarCP li.over ul{ display: block; font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li ul li{
+	float: none;
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li ul li ul{
+	margin-right:150px;
+	margin-top:-25px;
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li ul li ul li{
+	display:none;
+font-family: Tahoma; direction: rtl;}
+div#navbarCP ul li ul li:hover ul li {
+	display:block;
+font-family: Tahoma; direction: rtl;}
+
+div#bodyCP{
+	width: 95%;
+	margin: 0 auto;
+	background-color: #FFFFFF;
+	border: 1px solid #CCCCCC;
+	padding: 8px;
+font-family: Tahoma; direction: rtl;}
+div#containBodyCP{
+	padding: 0;
+	margin: 0;
+font-family: Tahoma; direction: rtl;}
+div#navOptionsCP{
+	padding: 0px 5px 0px 5px;
+	text-align: right;
+	background: #EEEEEE;
+	border-top: 1px solid #FFFFFF;
+	border-bottom: 1px solid #CCCCCC;
+	height: 35px;
+font-family: Tahoma; direction: rtl;
+}
+div#navOptionsCP a{
+	border: 1px solid #DFE0FD;
+	height: 32px;
+	display: block;
+	width: 32px;
+	float: left;
+	margin: 0;
+	margin-right: 2px;
+font-family: Tahoma; direction: rtl;}
+div#navOptionsCP a:hover{
+	background-color: #E7F4F7;
+	border-color: #ADD8E6;
+font-family: Tahoma; direction: rtl;}
+div#navOptionsCP .modname{
+	float: right;
+	font-size: 18px;
+	font-weight: bold;
+	color: Silver;
+	margin-top: 4px;
+font-family: Tahoma; direction: rtl;}
+.CPrssLinks{
+	padding: 4px;
+font-family: Tahoma; direction: rtl;}
+.CPrssLinks a{
+	font-size: 12px;
+	background: url(images/item.png) no-repeat right;
+	padding: 2px;
+	display: block;
+	padding-right: 18px;
+font-family: Tahoma; direction: rtl;}
+div.CPfoot{
+	text-align: center;
+	font-size: 10px;
+	font-weight: bold;
+	color: #666666;
+	background: url(images/bg-lr-titles.gif);
+	height: 15px;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+font-family: Tahoma; direction: rtl;}
+
+.CPbigTitle{
+
+  font-size: 15px;
+	color: #777777;
+	background: no-repeat left top;
+	font-weight: bold;
+	height: 40px;
+	vertical-align: middle;
+	padding: 10px 0 0 50px;
+	border-bottom: 3px solid #000000;
+font-family: Tahoma; direction: rtl;}
+#nav-change-language {
+	float: left;
+	padding-top: 5px;
+	padding-left: 5px;
+font-family: Tahoma; direction: rtl;}
+table
+{
+direction: rtl;
+text-align: right;
+}
+table td
+{
+direction: rtl;
+text-align: right;
+}
+table tr
+{
+direction: rtl;
+text_align: right;
+}
+ul
+{
+   direction: rtl;
+   text-align: right;
+}
+div.content
+{
+  direction: rtl;
+  text-align: right;
+}
