@@ -1,0 +1,186 @@
+/*Made some necessary changes for RTL languages by stranger @ www.impresscms.ir */
+table.outer {
+    width:      100%;
+}
+
+img {
+    border:     0;
+}
+
+acronym, abbr, dfn {
+    cursor:     help;
+}
+
+#xoopsHiddenText {
+    visibility:         hidden;
+    color:              #000000;
+    font-weight:        normal;
+    font-style:         normal;
+    text-decoration:    none;
+}
+
+.pagneutral {
+    font-size:          10px;
+    width:              16px;
+    height:             19px;
+    text-align:         center;
+    background-image:   url(./images/pagneutral.gif);
+}
+
+.pagact {
+    font-size:          10px;
+    width:              16px;
+    height:             19px;
+    text-align:         center;
+    background-image:   url(./images/pagact.gif);
+}
+
+.paginact {
+    font-size:          10px;
+    width:              16px;
+    height:             19px;
+    text-align:         center;
+    background-image:   url(./images/paginact.gif);
+}
+
+/* For required elements in XOOPS form, can be overwritten in theme styles */
+.xo-theme-form td.head {
+    width: 30%;
+}
+
+.xoops-form-element-caption .caption-marker {
+    display:            none;
+}
+
+.xoops-form-element-caption-required .caption-marker {
+	background-color:   inherit;
+	padding-left: 	    2px;
+	color: 			    #ff0000;
+}
+
+.xoops-form-element-help {
+	font-size:		    .9em;
+    padding-top:        5px;
+    font-weight:        normal;
+}
+
+#xo-logger-output{ font-size: .8em;} /* only needed until logger.php and logger_render.php are modified */
+
+/* For banners.php */
+#bannerstats {}
+#login_window  {
+	max-width:						480px;
+	margin:							1em auto;
+	background-color:				#f8f8f8;
+	color: 							inherit;
+	border:							1px solid #000;
+}
+#login_window  h2 {
+	margin:							.5em;
+	padding:							130px 0 0;
+	background:						url( images/password.png) no-repeat center top;
+	text-align:						center;
+}
+.login_form  .credentials {
+	margin:							.5em 1em;
+	padding:							1em;
+	background-color:				#ccc;
+	color:							inherit;
+}
+.login_form  .credentials label {
+	display:						block;
+	width:							33%;
+	margin:							1px;
+}
+.login_form  .credentials input {
+	width:							50%;
+	margin:							1px;
+	padding:							1px;
+	border:							1px solid #000;
+}
+.login_form  .credentials input:focus {
+	border:							1px solid #2266cc;
+}
+.login_form  .actions {
+	padding:							1.5em .5em .5em;
+	text-align:						center;
+}
+.login_info {
+	margin:							.5em 1em;
+	text-align: 					center;
+}
+.content_title {
+	font-size: 						1.2em;
+}
+#bannerstats td {
+	text-align: 					center;
+}
+
+.CPbigTitle{
+	font-size: 20px;
+	color: #1E90FF;
+	background: no-repeat left top;
+	font-weight: bold;
+	height: 40px;
+	vertical-align: middle;
+	padding: 10px 0 0 50px;
+	border-bottom: 3px solid #1E90FF;
+	font-family: Tahoma; }
+.CPindexOptions{
+	padding: 4px;
+	vertical-align: top;
+}
+.CPmediumTitle{
+	font-weight: bold;
+	font-size: 14px;
+	color: #FF4500;
+}
+div.cpicon{
+	margin: 3px;
+	font-family: Tahoma;
+	text-align: center;
+}
+div.cpicon a {
+	display: block; float: right;
+	height: 85px !important;
+	height: 85px;
+	width: 85px !important;
+	width: 85px;
+	vertical-align: middle;
+	text-decoration : none;
+	border: 1px solid #CCCCCC;
+	padding: 2px 5px 1px 5px;
+	margin: 3px;
+	color: #666666;
+}
+
+div.cpicon a:hover{
+	background-color: #FFF6C1;
+	border: 1px solid #FF9900;
+	color: #1E90FF;
+}
+
+div.cpicon img { margin-top: 4px; margin-bottom: 4px; width: 32px; height: 32px;}
+div.cpicon span {
+	font-size: 11px;
+	font-weight: bold;
+	display: block;
+	overflow: hidden;
+}
+div.cpicon span.uno{
+	font-size: 11px;
+	font-weight: normal;
+	text-decoration: underline;
+	color: Blue;
+}
+div.cpicon span.unor{
+	font-size: 11px;
+	font-weight: normal;
+	text-decoration: underline;
+	color: #CC0000;
+}
+
+#http_error_title {padding-top: 5px; padding-bottom: 5px; font-size: 20px; font-weight: bold;}
+#http_error_text {padding-top: 5px; padding-bottom: 5px; text-align: left;}
+#http_error_searchform{padding-top: 5px; line-height: 5px; padding-bottom: 0px;}
+#http_error li{color: black; padding-top: 5px; padding-bottom: 5px;}
